--- a/ru/policy.html
+++ b/ru/policy.html
@@ -18,54 +18,54 @@
                 <div class="header__container">
                     <div class="header__wrapper">
                         <div class="header__logo">
-                            <a href="/">
-                                <img src="img/logo.svg" alt="People Find" />
+                            <a href="/ru">
+                                <img src="/img/logo.svg" alt="People Find" />
                             </a>
                         </div>
                         <div class="header__menu menu">
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/" class="menu__link">Главная</a>
+                                        <a href="/ru" class="menu__link">Главная</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="about.html" class="menu__link">О нас</a>
+                                        <a href="ru/about.html" class="menu__link">О нас</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="services.html" class="menu__link dropdown">
+                                        <a href="ru/services.html" class="menu__link dropdown">
                                             <span class="menu__text">Услуги</span>
                                             <img
-                                                src="img/arrow-menu.svg"
+                                                src="/img/arrow-menu.svg"
                                                 class="arrow"
                                                 alt="arrow" />
                                         </a>
                                         <ul class="dropdown__menu">
                                             <li>
-                                                <a href="recruitment.html"
+                                                <a href="ru/recruitment.html"
                                                     >Подбор руководящего персонала</a
                                                 >
                                             </li>
-                                            <li><a href="resources.html">Кадры</a></li>
-                                            <li><a href="training.html">Обучение</a></li>
+                                            <li><a href="ru/resources.html">Кадры</a></li>
+                                            <li><a href="ru/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="consulting.html">Консалтинг</a>
+                                                <a href="ru/consulting.html">Консалтинг</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="clients.html" class="menu__link">Клиенты</a>
+                                        <a href="ru/clients.html" class="menu__link">Клиенты</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="careers.html" class="menu__link">Карьера</a>
+                                        <a href="ru/careers.html" class="menu__link">Карьера</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="contact.html" class="menu__link">Контакты</a>
+                                        <a href="ru/contact.html" class="menu__link">Контакты</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
                                             <span class="menu__text">RU</span>
                                             <img
-                                                src="img/arrow-menu.svg"
+                                                src="/img/arrow-menu.svg"
                                                 class="arrow"
                                                 alt="arrow" />
                                         </a>
