--- a/ru/index.html
+++ b/ru/index.html
@@ -32,7 +32,7 @@
                                         <a href="ru/about.html" class="menu__link">О нас</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="services.html" class="menu__link dropdown">
+                                        <a href="ru/services.html" class="menu__link dropdown">
                                             <span class="menu__text">Услуги</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
@@ -45,21 +45,21 @@
                                                     >Подбор руководящего персонала</a
                                                 >
                                             </li>
-                                            <li><a href="resources.html">Кадры</a></li>
-                                            <li><a href="training.html">Обучение</a></li>
+                                            <li><a href="ru/resources.html">Кадры</a></li>
+                                            <li><a href="ru/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="consulting.html">Консалтинг</a>
+                                                <a href="ru/consulting.html">Консалтинг</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="clients.html" class="menu__link">Клиенты</a>
+                                        <a href="ru/clients.html" class="menu__link">Клиенты</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="careers.html" class="menu__link">Карьера</a>
+                                        <a href="ru/careers.html" class="menu__link">Карьера</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="contact.html" class="menu__link">Контакты</a>
+                                        <a href="ru/contact.html" class="menu__link">Контакты</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
