--- a/ru/careers.html
+++ b/ru/careers.html
@@ -29,10 +29,10 @@
                                         <a href="/ru" class="menu__link">Главная</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="ru/about.html" class="menu__link">О нас</a>
+                                        <a href="/ru/about.html" class="menu__link">О нас</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="ru/services.html" class="menu__link dropdown">
+                                        <a href="/ru/services.html" class="menu__link dropdown">
                                             <span class="menu__text">Услуги</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
@@ -41,27 +41,27 @@
                                         </a>
                                         <ul class="dropdown__menu">
                                             <li>
-                                                <a href="ru/recruitment.html"
+                                                <a href="/ru/recruitment.html"
                                                     >Подбор руководящего персонала</a
                                                 >
                                             </li>
-                                            <li><a href="ru/resources.html">Кадры</a></li>
-                                            <li><a href="ru/training.html">Обучение</a></li>
+                                            <li><a href="/ru/resources.html">Кадры</a></li>
+                                            <li><a href="/ru/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="ru/consulting.html">Консалтинг</a>
+                                                <a href="/ru/consulting.html">Консалтинг</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="ru/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/ru/clients.html" class="menu__link">Клиенты</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="ru/careers.html" class="menu__link active"
+                                        <a href="/ru/careers.html" class="menu__link active"
                                             >Карьера</a
                                         >
                                     </li>
                                     <li class="menu__item">
-                                        <a href="ru/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/ru/contact.html" class="menu__link">Контакты</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
