--- a/ru/clients.html
+++ b/ru/clients.html
@@ -110,8 +110,8 @@
                         </div>
                         <div class="clients__wrapper_bottom">
                             <div class="clients__img">
-                                <img src="img/clients.webp" alt="Clients" />
-                                <img src="img/clients-tab.webp" alt="Clients" />
+                                <img src="/img/clients.webp" alt="Clients" />
+                                <img src="/img/clients-tab.webp" alt="Clients" />
                             </div>
                             <div class="clients__text">
                                 <p class="text-left">
@@ -141,7 +141,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
