--- a/ru/index.html
+++ b/ru/index.html
@@ -89,7 +89,7 @@
                     <div class="hero__container">
                         <div class="hero__wrapper">
                             <div class="hero__subtitle">
-                                <img src="img/fire-icon.svg" alt="icon-fire" />
+                                <img src="/img/fire-icon.svg" alt="icon-fire" />
                                 <h2>Решение сложных задач через партнерство</h2>
                             </div>
                             <h1 class="hero__title">
@@ -117,47 +117,47 @@
                         <div class="services__wrapper">
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-1.svg" alt="Services" />
+                                    <img src="/img/services-1.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Подбор руководящих кадров</h3>
                                     <a href="recruitment.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-2.svg" alt="Services" />
+                                    <img src="/img/services-2.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Управление персоналом</h3>
                                     <a href="resources.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-3.svg" alt="Services" />
+                                    <img src="/img/services-3.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Обучение</h3>
                                     <a href="training.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-4.svg" alt="Services" />
+                                    <img src="/img/services-4.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">
                                         Консультации по вопросам управления
                                     </h3>
                                     <a href="consulting.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
@@ -180,15 +180,15 @@
                             </div>
                             <div class="benefits__items" data-da=".benefits__content, 991, 2">
                                 <div class="benefits__item">
-                                    <img src="img/benefits-1.svg" alt="icon" />
+                                    <img src="/img/benefits-1.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Финансы</h3>
                                 </div>
                                 <div class="benefits__item">
-                                    <img src="img/benefits-2.svg" alt="icon" />
+                                    <img src="/img/benefits-2.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Здравоохранение</h3>
                                 </div>
                                 <div class="benefits__item">
-                                    <img src="img/benefits-3.svg" alt="icon" />
+                                    <img src="/img/benefits-3.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Логистика</h3>
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
                     <div class="about__container">
                         <div class="about__wrapper">
                             <div class="about__img">
-                                <img src="img/about.webp" alt="About" />
+                                <img src="/img/about.webp" alt="About" />
                             </div>
                             <div class="about__content">
                                 <h2 class="about__title section__title">
@@ -304,7 +304,7 @@
 
                                 <div class="form__file">
                                     <label for="file-upload" class="file-label">
-                                        <img src="img/upload.svg" alt="upload" /> Загрузить файл
+                                        <img src="/img/upload.svg" alt="upload" /> Загрузить файл
                                     </label>
                                     <input
                                         type="file"
@@ -349,7 +349,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
