--- a/ru/key-manager.html
+++ b/ru/key-manager.html
@@ -93,9 +93,8 @@
                             <div>
                                 <div class="vacancy__content">
                                     <h2 class="vacancy__title">
-                                        <span class="yellow"
-                                            >Менеджер по работе с ключевыми клиентами</span
-                                        >
+                                        Менеджер по работе с
+                                        <span class="yellow"> ключевыми клиентами</span>
                                     </h2>
                                     <h3 class="vacancy__subtitle">Обязанности:</h3>
 
@@ -197,7 +196,7 @@
 
                                 <div class="form__file">
                                     <label for="file-upload" class="file-label">
-                                        <img src="img/upload.svg" alt="upload" /> Загрузить файл
+                                        <img src="/img/upload.svg" alt="upload" /> Загрузить файл
                                     </label>
                                     <input
                                         type="file"
@@ -227,7 +226,7 @@
                                         Я прочитал(а) и согласен(а) с
                                         <a href="policy.html">Политикой конфиденциальности</a> и
                                         <a href="terms.html">Условиями использования</a>
-                                        <span>Workpoint</span>!
+                                        <span> Workpoint</span>!
                                     </label>
                                 </div>
 
@@ -242,7 +241,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
