--- a/ru/policy.html
+++ b/ru/policy.html
@@ -96,7 +96,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
