--- a/ru/recruitment.html
+++ b/ru/recruitment.html
@@ -106,7 +106,7 @@
                             <div
                                 class="resources__img resources__img_v3"
                                 data-da=".resources__container, 991, 5">
-                                <img src="img/recruitment.webp" alt="Human Resources" />
+                                <img src="/img/recruitment.webp" alt="Human Resources" />
                             </div>
                             <div
                                 class="resources__content resources__content_v3 resources__content_v4">
@@ -241,7 +241,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
