--- a/ru/resources.html
+++ b/ru/resources.html
@@ -118,7 +118,7 @@
                                 </p>
                             </div>
                             <div class="resources__img" data-da=".resources__container, 991, 5">
-                                <img src="img/resources-1.webp" alt="Human Resources" />
+                                <img src="/img/resources-1.webp" alt="Human Resources" />
                             </div>
                         </div>
                         <div class="resources__list-wrapper">
@@ -225,7 +225,7 @@
                         <div class="resources-results-wrapper">
                             <div class="resources-results__top">
                                 <div class="resources__results-img">
-                                    <img src="img/resources-2.webp" alt="Results" />
+                                    <img src="/img/resources-2.webp" alt="Results" />
                                 </div>
                                 <div class="resources-results-content">
                                     <h2 class="resources__title section__title">
@@ -320,7 +320,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
