--- a/ru/about.html
+++ b/ru/about.html
@@ -128,15 +128,15 @@
                             </div>
                             <div class="benefits__items" data-da=".benefits__content, 991, 2">
                                 <div class="benefits__item">
-                                    <img src="img/benefits-1.svg" alt="icon" />
+                                    <img src="/img/benefits-1.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Финансы</h3>
                                 </div>
                                 <div class="benefits__item">
-                                    <img src="img/benefits-2.svg" alt="icon" />
+                                    <img src="/img/benefits-2.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Здравоохранение</h3>
                                 </div>
                                 <div class="benefits__item">
-                                    <img src="img/benefits-3.svg" alt="icon" />
+                                    <img src="/img/benefits-3.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Логистика</h3>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
