--- a/ru/careers.html
+++ b/ru/careers.html
@@ -104,15 +104,15 @@
                             </div>
                             <div class="benefits__items">
                                 <div class="benefits__item">
-                                    <img src="img/benefits-1.svg" alt="icon" />
+                                    <img src="/img/benefits-1.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Финансы</h3>
                                 </div>
                                 <div class="benefits__item">
-                                    <img src="img/benefits-2.svg" alt="icon" />
+                                    <img src="/img/benefits-2.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Здравоохранение</h3>
                                 </div>
                                 <div class="benefits__item">
-                                    <img src="img/benefits-3.svg" alt="icon" />
+                                    <img src="/img/benefits-3.svg" alt="icon" />
                                     <h3 class="benefits__subtitle">Логистика</h3>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                             <div class="team__item">
                                 <div>
                                     <h3 class="team__item-title team__item-title_purple">
-                                        <img src="img/star-purple.svg" alt="" /> Специалист по
+                                        <img src="/img/star-purple.svg" alt="" /> Специалист по
                                         подбору персонала
                                     </h3>
                                     <p class="team__item-desc">Полная занятость</p>
@@ -135,7 +135,7 @@
                             <div class="team__item">
                                 <div>
                                     <h3 class="team__item-title team__item-title_orange">
-                                        <img src="img/star-orange.svg" alt="" /> Менеджер по работе
+                                        <img src="/img/star-orange.svg" alt="" /> Менеджер по работе
                                         с ключевыми клиентами
                                     </h3>
                                     <p class="team__item-desc">Полная занятость</p>
@@ -151,7 +151,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
