--- a/ru/consulting.html
+++ b/ru/consulting.html
@@ -106,7 +106,7 @@
                             <div
                                 class="resources__img img-decor"
                                 data-da=".resources__container, 991, 5">
-                                <img src="img/consulting.webp" alt="Management Consulting" />
+                                <img src="/img/consulting.webp" alt="Management Consulting" />
                             </div>
                             <div
                                 class="resources__content resources__content_v4 resources__content_v4">
@@ -137,7 +137,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
