--- a/ru/contact.html
+++ b/ru/contact.html
@@ -163,7 +163,7 @@
 
                                 <div class="form__file">
                                     <label for="file-upload" class="file-label">
-                                        <img src="img/upload.svg" alt="upload" /> Загрузить файл
+                                        <img src="/img/upload.svg" alt="upload" /> Загрузить файл
                                     </label>
                                     <input
                                         type="file"
@@ -193,7 +193,7 @@
                                         Я прочитал(а) и согласен(а) с
                                         <a href="policy.html">Политикой конфиденциальности</a> и
                                         <a href="terms.html">Условиями использования</a>
-                                        <span>Workpoint</span>!
+                                        <span> Workpoint</span>!
                                     </label>
                                 </div>
 
@@ -208,7 +208,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
