--- a/ru/services.html
+++ b/ru/services.html
@@ -100,47 +100,47 @@
                         <div class="services__wrapper">
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-1.svg" alt="Services" />
+                                    <img src="/img/services-1.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Подбор руководящих кадров</h3>
                                     <a href="recruitment.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-2.svg" alt="Services" />
+                                    <img src="/img/services-2.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Управление персоналом</h3>
                                     <a href="resources.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-3.svg" alt="Services" />
+                                    <img src="/img/services-3.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Обучение</h3>
                                     <a href="training.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
                             <div class="services__item">
                                 <div class="services__item-img">
-                                    <img src="img/services-4.svg" alt="Services" />
+                                    <img src="/img/services-4.svg" alt="Services" />
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">
                                         Консультации по вопросам управления
                                     </h3>
                                     <a href="consulting.html" class="services__item-link"
-                                        >Узнать больше <img src="img/arrow-right.svg" alt="right"
+                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
@@ -153,7 +153,7 @@
                     <div class="footer__top">
                         <div class="footer__wrapper-top">
                             <div class="footer__logo">
-                                <img src="img/logo.svg" alt="People Find" />
+                                <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
                                 <li class="footer__link"><a href="/">Главная</a></li>
