--- a/ru/index.html
+++ b/ru/index.html
@@ -10,6 +10,14 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <!-- <meta name="robots" content="noindex, nofollow"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
+            .services__title.section__title::before {
+                z-index: -1;
+            }
+            .contact__form input {
+                font-size: 15px;
+            }
+        </style>
     </head>
 
     <body>
