--- a/ru/hr.html
+++ b/ru/hr.html
@@ -10,6 +10,11 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <!-- <meta name="robots" content="noindex, nofollow"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
+            .contact__form input {
+                font-size: 15px;
+            }
+        </style>
     </head>
 
     <body>
