--- a/ru/careers.html
+++ b/ru/careers.html
@@ -100,7 +100,7 @@
                                     приобрести ценный опыт и открыть для себя перспективные
                                     карьерные возможности.
                                 </p>
-                                <a href="contact.html" class="clients__btn btn">Get in touch</a>
+                                <a href="contact.html" class="clients__btn btn">Свяжитесь с нами</a>
                             </div>
                             <div class="benefits__items">
                                 <div class="benefits__item">
