--- a/ru/clients.html
+++ b/ru/clients.html
@@ -113,7 +113,7 @@
                                 <img src="/img/clients.webp" alt="Clients" />
                                 <img src="/img/clients-tab.webp" alt="Clients" />
                             </div>
-                            <div class="clients__text">
+                            <div class="clients__text" style="top: 0">
                                 <p class="text-left">
                                     Наши клиенты представляют различные отрасли, такие как
                                     производство, финансы, биотехнологии, фармацевтика, девелопмент
