--- a/ru/index.html
+++ b/ru/index.html
@@ -108,7 +108,7 @@
                                 Наши услуги адаптированы к различным срокам, в зависимости от
                                 потребностей каждой компании.
                             </p>
-                            <a href="contact.html" class="hero__btn btn">Свяжитесь с нами</a>
+                            <a href="/ru/contact.html" class="hero__btn btn">Свяжитесь с нами</a>
                         </div>
                     </div>
                 </section>
@@ -121,7 +121,7 @@
                         <p class="services__desc section__desc">
                             Оцените все возможности с помощью нашего спектра услуг.
                         </p>
-                        <a href="services.html" class="services__btn btn">Услуги</a>
+                        <a href="/ru/services.html" class="services__btn btn">Услуги</a>
                         <div class="services__wrapper">
                             <div class="services__item">
                                 <div class="services__item-img">
@@ -129,7 +129,7 @@
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Подбор руководящих кадров</h3>
-                                    <a href="recruitment.html" class="services__item-link"
+                                    <a href="/ru/recruitment.html" class="services__item-link"
                                         >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
@@ -140,7 +140,7 @@
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Управление персоналом</h3>
-                                    <a href="resources.html" class="services__item-link"
+                                    <a href="/ru/resources.html" class="services__item-link"
                                         >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">Обучение</h3>
-                                    <a href="training.html" class="services__item-link"
+                                    <a href="/ru/training.html" class="services__item-link"
                                         >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
@@ -164,7 +164,7 @@
                                     <h3 class="services__item-title">
                                         Консультации по вопросам управления
                                     </h3>
-                                    <a href="consulting.html" class="services__item-link"
+                                    <a href="/ru/consulting.html" class="services__item-link"
                                         >Узнать больше <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
@@ -184,7 +184,9 @@
                                     стартапов до крупных предприятий — достигать стабильной
                                     прибыльности.
                                 </p>
-                                <a href="clients.html" class="benefits__btn btn">Узнать больше</a>
+                                <a href="/ru/clients.html" class="benefits__btn btn"
+                                    >Узнать больше</a
+                                >
                             </div>
                             <div class="benefits__items" data-da=".benefits__content, 991, 2">
                                 <div class="benefits__item">
@@ -217,7 +219,7 @@
                                     Наши услуги адаптированы к различным срокам, в зависимости от
                                     потребностей каждой компании.
                                 </p>
-                                <a href="about.html" class="about__btn btn">Узнайте</a>
+                                <a href="/ru/about.html" class="about__btn btn">Узнайте</a>
                             </div>
                         </div>
                     </div>
@@ -232,7 +234,7 @@
                                 Найдите свое место в динамичной среде, где ценятся креативность и
                                 амбиции.
                             </p>
-                            <a href="careers.html" class="cta__btn btn">Открытые вакансии</a>
+                            <a href="/ru/careers.html" class="cta__btn btn">Открытые вакансии</a>
                         </div>
                     </div>
                 </section>
@@ -360,12 +362,14 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/">Главная</a></li>
-                                <li class="footer__link"><a href="about.html">О нас</a></li>
-                                <li class="footer__link"><a href="services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="careers.html">Карьера</a></li>
-                                <li class="footer__link"><a href="contact.html">Контакты</a></li>
+                                <li class="footer__link"><a href="/ru">Главная</a></li>
+                                <li class="footer__link"><a href="/ru/about.html">О нас</a></li>
+                                <li class="footer__link"><a href="/ru/services.html">Услуги</a></li>
+                                <li class="footer__link"><a href="/ru/clients.html">Клиенты</a></li>
+                                <li class="footer__link"><a href="/ru/careers.html">Карьера</a></li>
+                                <li class="footer__link">
+                                    <a href="/ru/contact.html">Контакты</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -374,9 +378,9 @@
                             <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/ru/policy.html">Политика конфиденциальности</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link"><a href="/ru/terms.html">Условия</a></li>
                             </ul>
                         </div>
                     </div>
