--- a/ru/recruitment.html
+++ b/ru/recruitment.html
@@ -244,12 +244,14 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/">Главная</a></li>
-                                <li class="footer__link"><a href="about.html">О нас</a></li>
-                                <li class="footer__link"><a href="services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="careers.html">Карьера</a></li>
-                                <li class="footer__link"><a href="contact.html">Контакты</a></li>
+                                <li class="footer__link"><a href="/ru">Главная</a></li>
+                                <li class="footer__link"><a href="/ru/about.html">О нас</a></li>
+                                <li class="footer__link"><a href="/ru/services.html">Услуги</a></li>
+                                <li class="footer__link"><a href="/ru/clients.html">Клиенты</a></li>
+                                <li class="footer__link"><a href="/ru/careers.html">Карьера</a></li>
+                                <li class="footer__link">
+                                    <a href="/ru/contact.html">Контакты</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
