--- a/ru/services.html
+++ b/ru/services.html
@@ -156,12 +156,12 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/">Главная</a></li>
-                                <li class="footer__link"><a href="about.html">О нас</a></li>
-                                <li class="footer__link"><a href="services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="careers.html">Карьера</a></li>
-                                <li class="footer__link"><a href="contact.html">Контакты</a></li>
+                                <li class="footer__link"><a href="/ru">Главная</a></li>
+                                <li class="footer__link"><a href="/ruabout.html">О нас</a></li>
+                                <li class="footer__link"><a href="/ruservices.html">Услуги</a></li>
+                                <li class="footer__link"><a href="/ruclients.html">Клиенты</a></li>
+                                <li class="footer__link"><a href="/rucareers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/rucontact.html">Контакты</a></li>
                             </ul>
                         </div>
                     </div>
